[gd_scene load_steps=7 format=2]

[ext_resource path="res://src/prefabs/text_bar.gd" type="Script" id=2]
[ext_resource path="res://assets/fonts/item_font.tres" type="DynamicFont" id=3]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 1, 1, 1, 0.709804 )
corner_radius_bottom_left = 10

[node name="Textbar" type="Control"]
margin_right = 561.0
margin_bottom = 125.0
rect_min_size = Vector2( 128, 0 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false,
"_edit_vertical_guides_": [ 291.0, 490.0 ]
}

[node name="Tip" type="Label" parent="."]
anchor_left = 0.032
anchor_right = 0.867
margin_left = 13.568
margin_top = 9.0
margin_right = -47.809
margin_bottom = 59.0
custom_colors/font_color = Color( 1, 1, 1, 0.482353 )
custom_fonts/font = ExtResource( 3 )
custom_styles/normal = SubResource( 6 )
text = "Search.."
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Line" type="LineEdit" parent="."]
anchor_left = 0.033
anchor_right = 0.974
margin_left = 6.992
margin_top = 10.891
margin_right = -102.647
margin_bottom = 61.891
custom_colors/selection_color = Color( 1, 1, 1, 0.631373 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_constants/minimum_spaces = 0
custom_fonts/font = ExtResource( 3 )
custom_styles/read_only = SubResource( 5 )
custom_styles/focus = SubResource( 5 )
custom_styles/normal = SubResource( 4 )
max_length = 40
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_left = 0.034
anchor_right = 0.971
margin_left = 0.925999
margin_top = 62.0
margin_right = 0.268982
margin_bottom = 68.0
rect_min_size = Vector2( 0, 2 )
custom_styles/panel = SubResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="focus_entered" from="Line" to="." method="_on_Line_focus_entered"]
[connection signal="text_changed" from="Line" to="." method="_on_Line_text_changed"]
[connection signal="text_entered" from="Line" to="." method="_on_Line_text_entered"]
